@@ -43,6 +43,7 @@ enum {
 @end
 
 @class GDataServiceGoogle;
+@class GDataEntryACL;
 
 // GDataServiceTicket is the version of a ticket that supports
 // Google authentication
@@ -127,11 +128,30 @@ enum {
                                           didFinishSelector:(SEL)finishedSelector
                                             didFailSelector:(SEL)failedSelector;
 
+// ACL feeds and entries
+
 - (GDataServiceTicket *)fetchACLFeedWithURL:(NSURL *)feedURL
                                    delegate:(id)delegate
                           didFinishSelector:(SEL)finishedSelector
                             didFailSelector:(SEL)failedSelector;
-  
+
+- (GDataServiceTicket *)fetchACLEntryByInsertingEntry:(GDataEntryACL *)entryToInsert
+                                           forFeedURL:(NSURL *)feedURL
+                                             delegate:(id)delegate
+                                    didFinishSelector:(SEL)finishedSelector
+                                      didFailSelector:(SEL)failedSelector;
+
+- (GDataServiceTicket *)fetchACLEntryByUpdatingEntry:(GDataEntryACL *)entryToUpdate
+                                         forEntryURL:(NSURL *)entryURL
+                                            delegate:(id)delegate
+                                   didFinishSelector:(SEL)finishedSelector
+                                     didFailSelector:(SEL)failedSelector;
+
+- (GDataServiceTicket *)deleteACLEntry:(GDataEntryACL *)entryToDelete
+                              delegate:(id)delegate
+                     didFinishSelector:(SEL)finishedSelector
+                       didFailSelector:(SEL)failedSelector;
+
 - (void)setCaptchaToken:(NSString *)captchaToken
           captchaAnswer:(NSString *)captchaAnswer;
 
